--- a/deployment/cloud/configuration/group_vars/all.yaml
+++ b/deployment/cloud/configuration/group_vars/all.yaml
@@ -3,7 +3,8 @@ user: "ubuntu"
 network_interface: "eth0"
 cloud_provider: "external"
 protocol: "http"
-db_host: "terraform-20210526100617992400000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com"
+db_host: "terraform-20210526171026657500000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com"
 pma_host: "db.allefebv.click"
 dashboard_host: "dashboard.allefebv.click"
 app_host: "allefebv.click"
+kms_key: "arn:aws:kms:eu-west-3:843020778154:key/63ebb4c9-e9c6-4e85-9f92-477be8426182"
