--- a/deployment/local/configuration/group_vars/all.yaml
+++ b/deployment/local/configuration/group_vars/all.yaml
@@ -9,3 +9,4 @@ db_host: "mysql-service"
 pma_host: "db.camagru.com"
 dashboard_host: "dashboard.camagru.com"
 app_host: "camagru.com"
+kms_key: "arn:aws:kms:eu-west-3:843020778154:key/63ebb4c9-e9c6-4e85-9f92-477be8426182"
