--- a/deployment/roles/k8s-cluster-init/init-servers/tasks/main.yaml
+++ b/deployment/roles/k8s-cluster-init/init-servers/tasks/main.yaml
@@ -50,6 +50,8 @@
     name: "{{ item }}"
     state: present
   loop: "{{ kernel_modules }}"
+  tags:
+    - restart
 
 - name: update sysctl file
   become: yes
