readme update + new tags for modularity + playbook reset + fix local ingress

--- a/deployment/roles/k8s-cluster-init/masters-ingress-local/tasks/main.yaml
+++ b/deployment/roles/k8s-cluster-init/masters-ingress-local/tasks/main.yaml
@@ -46,3 +46,7 @@
       hostPort:
         enabled: true
     kubeconfig: "/home/{{ user }}/.kube/config"
+
+- name: Workaround admission issue
+  command:
+    cmd: kubectl delete ValidatingWebhookConfiguration my-ingress-ingress-nginx-admission
